modigy content of project part

--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1877f468c8.js" crossorigin="anonymous"></script>
     <script src="main.js" defer></script>
 
@@ -42,40 +43,40 @@
         <!-- about me -->
         <a name="aboutMe"></a>
         <div class="aboutMe">
-            <span>About Me</span>
+            <span class="not_font">About Me</span>
             <div class="content">
                 <div class="my_image"></div>
                 <div class="info">
                     <ul class="persnal_info">
-                        <span>Introduction</span>
+                        <span class="not_font">Introduction</span>
                         <li class="name">
-                            <p class="aco_title">소개</p>
-                            <div class="con">백엔드분야를 중점적으로 공부하고 있는 최종인입니다.</div>
+                            <p class="aco_title">紹介</p>
+                            <div class="con">バックエンドを中心的に勉強しているチェ・ジョンインと申します。</div>
                         </li>
                         <li class="hobby">
-                            <p class="aco_title">취미</p>
+                            <p class="aco_title">趣味</p>
                             <ul class="con">
-                                <li>코딩</li>
-                                <li>탁구</li>
+                                <li>コーディング</li>
+                                <li>卓球</li>
                             </ul>
                         </li>
                         <li class="motto">
-                            <p class="aco_title">좌우명</p>
-                            <div class="con">실패를 무서워하지 말고, 일단 한번 해보자!</div>
+                            <p class="aco_title">座右の銘</p>
+                            <div class="con">失敗に恐れずに、一度やってみよう！</div>
                         </li>
                         <li class="goal">
-                            <p class="aco_title">목표</p>
-                            <div class="con">IT를 이용해서, 불가능했던 것을 가능하게하는 엔지니어가 되고싶습니다.</div>
+                            <p class="aco_title">目標</p>
+                            <div class="con">ITを利用し、不可能だったことを可能にするエンジニアになることを目指しております。</div>
                         </li>                        
                     </ul>
                     <ul class="certification_info">
-                        <span class="title">Certification</span>
+                        <span class="not_font">Certification</span>
                         <li class="goal">
-                            <p class="aco_title">자격증 종류</p>
+                            <p class="aco_title">取った資格</p>
                             <ul class="con">
-                                <li>정보처리기사</li>
+                                <li>基本情報技術者</li>
                                 <li>JLPT N1</li>
-                                <li>TOEIC 670점</li>
+                                <li>TOEIC 670点</li>
                             </ul>
                         </li>
                     </ul>
@@ -195,30 +196,75 @@
             <div class="modal">
                 <div class="modal_content">
                     <ul class="modalContent">
-                        <li class="title">Yourima 중고품 EC Site</li>                        
+                        <li class="title">[Yourima]フリーマーケットECサイト</li>                        
                         <li class="modal_image1"></li>
-                        <li class="summary">개요 : 잡화점을 운영하는 의뢰인으로부터, 사업을 확대해 유저끼리 상품을 매매할 수 있는 사이트를 운영하고 싶다는 의뢰를 받아 제작했습니다.</li>
-                        <li class="dev_date">개발기간 : 2021. 01. 19 ~ 2021. 02. 16</li>
-                        <li class="function">담당기능 : 실시간 1대1 채팅기능, Email검증 기능, 그 밖에 여러 화면 및 추가기능</li>
-                        <li class="usedSkill">사용한 스킬 : PHP(Laravel), Vue.js, MySQL, Apache, windows</li>                                                    
+                        <li class="summary">
+                            <p>概要</p>
+                            雑貨店を経営している依頼人から、事業を拡大してユーザー同士で商品を売買できるサイトを運営したいという依頼を受けて製作しました。
+                        </li>
+                        <li class="dev_date">
+                            <p>開発期間</p>
+                            2021. 01. 19　―　2021. 02. 16
+                        </li>
+                        <li class="function">
+                            <p>担当機能</p>
+                            <ul>
+                                <li>E-mail検証を通じた会員登録</li>
+                                <li>リアルタイムチャット</li>
+                                <li>問い合わせとお気に入りページの画面と全体的な機能</li>
+                            </ul>
+                        </li>
+                        <li class="usedSkill">
+                            <p>使用言語</p>
+                            PHP(Laravel), Vue.js, MySQL, Apache, windows
+                        </li> 
                     </ul>
 
                     <ul class="modalContent">
                         <li class="title">To Do WepApp</li>
                         <li class="modal_image2"></li>
-                        <li class="summary">개요 : Vue.js의 공부를 겸해 스스로 사용하고 싶은 ToDo Wep App을 만들고 싶어서 제작했습니다.<li>
-                        <li class="dev_date">개발기간 : 2021. 08. 07 ~ 2021. 08. 17</li>
-                        <li class="function">기능 : ToDo 작성, 중요도 관리, 그룹관리, 패턴지정<li>
-                        <li class="usedSkill">사용한 스킬 : PHP(Laravel), Vue.js, MySQL, Apache, windows</li>
+                        <li class="summary">
+                            <p>概要</p>
+                            雑貨店を経営している依頼人から、事業を拡大してユーザー同士で商品を売買できるサイトを運営したいという依頼を受けて製作しました。
+                        </li>
+                        <li class="dev_date">
+                            <p>開発期間</p>
+                            2021. 08. 07　―　2021. 08. 17
+                        </li>
+                        <li class="function">
+                            <p>機能</p>
+                            <ul>
+                                <li>D-Day管理</li>
+                                <li>重要度管理</li>
+                                <li>グループ管理</li>
+                                <li>ToDo完了・復旧</li>
+                            </ul>
+                        </li>
+                        <li class="usedSkill">
+                            <p>使用言語</p>
+                            PHP(Laravel), Vue.js, MySQL, Apache, windows
+                        </li>                                                                        
                     </ul>
 
                     <ul class="modalContent">
                         <li class="title">GUI 이미지파일 편집</li>
                         <li class="modal_image3"></li>
-                        <li class="summary">개요 : 여러가지 사진을 통합하여 편하게 관리할 수 있도록 편집해주는 프로그램을 제작해보고 싶었습니다. </li>
-                        <li class="dev_date">개발기간 : 2020. 11. 28 ~ 2020. 12. 13</li>
-                        <li class="function">기능 : 여러 이미지를 통합해서 하나의 사진으로 만듦, 간격 조정, 여백 생성, 파일 포멧 변경</li> 
-                        <li class="usedSkill">사용한 스킬 : Python(tkinter)</li> 
+                        <li class="summary">
+                            <p>概要</p>
+                            私は日本のアニメーション、ニュース、ドラマなど様々なメディアを活用して勉強をしました。時々、状況に合った日本語の使い方を覚えるために画面をキャプチャーして、日本語のセリフと写真を一緒に保存しておいたりしました。その時、動画を止まって写真を撮って保存するのが不便でした。それで、Tkinterと追加コードを通じて自動的にする方法を探して見ようと思い、作りました。
+                        </li>
+                        <li class="dev_date">
+                            <p>開発期間</p>
+                            2020. 11. 28　―　2020. 12. 13
+                        </li>
+                        <li class="function">
+                            <p>機能</p>
+                            多数のイメージをつなぎ合わせて一枚のイメージにする。
+                        </li>
+                        <li class="usedSkill">
+                            <p>使用言語</p>
+                            Python(tkinter)
+                        </li>                        
                     </ul>
                     <div class="close"><i class="fas fa-times" id="close"></i></div>
                 </div>
