--- a/portfolio/ver2/index.html
+++ b/portfolio/ver2/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/1877f468c8.js" crossorigin="anonymous"></script>
     <script src="main.js" defer></script>
 
-    <title>Portfolio</title>
+    <title>My Portfolio WebSite</title>
 </head>
 <body>
     <!-- header -->
